--- a/index.css
+++ b/index.css
@@ -8,6 +8,7 @@ body{
  /*   background: rgb(123, 123, 123); */
    
 }
+
 header{
     width:100%;
     height:80px;
@@ -78,6 +79,7 @@ table{
     border:2px solid rgb(16, 214, 115);
     padding: 5px;
     box-sizing: border-box;
+    color:white;
 }
 .table-2>tbody>tr>{
     width: 100%;
@@ -102,7 +104,7 @@ table{
 #carro{
     width: 100%;
     height: auto;
-    border:2px solid darkred;
+     background: rgb(83, 83, 83);
     text-align: center;
     
 }
@@ -115,6 +117,14 @@ table{
     text-align: center;
     border: none;
     margin: auto;
+    cursor: pointer;
+}
+.btn-add:hover{
+    background: rgb(136, 221, 136);
+}
+.btn-add:active{
+    background: white;
+    color: black;
 }
 .btn-rest{
     width:20px;
@@ -128,6 +138,7 @@ table{
     flex-direction: row;
     border:none;
     margin: auto;
+    cursor: pointer;
 }
 
 .btn-vaciar{
