--- a/index.css
+++ b/index.css
@@ -181,7 +181,7 @@ table{
     .table-1{
         margin-top: 10px;
          width:100%;
-        border:2px solid blue;
+        
     }
  
      .table-2-on{
@@ -201,4 +201,10 @@ table{
     header>img{
         display: none;
     }
+    table{
+        width: 100%;
+        height: auto;
+    }
 }
+
+
